--- a/change-order.html
+++ b/change-order.html
@@ -14,17 +14,17 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
      
      <div class="container">
-      <div class="navbar-brand">change order</div>
+      <div class="navbar-brand">Thay đổi thứ tự</div>
       <button class="navbar-toggler"data-bs-toggle="collapse" data-bs-target="#unfold">
         <div class="navbar-toggler-icon"></div>
       </button>
       <div id="unfold" class="navbar-collapse collapse">
         <ul class="navbar-nav">
-          <li class="navbar-items"><a href="index.html" class='nav-link'>interface admin</a></li>
+          <li class="navbar-items"><a href="index.html" class='nav-link'>Quản lý trang chủ</a></li>
           <li class="navbar-items">
-            <a class='nav-link' href="products-admin.html">products admin</a></li>
+            <a class='nav-link' href="products-admin.html">Quản lý sản phẩm</a></li>
            <li class="navbar-items">
-             <a class="nav-link" href="order-info.html">order info</a>
+             <a class="nav-link" href="order-info.html">Thông tin khách hàng</a>
            </li>
         </ul>
       </div>
