--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
      
      <div class="container">
-      <div class="navbar-brand">interface admin</div>
+      <div class="navbar-brand">Quản lý trang chủ</div>
       <button class="navbar-toggler"data-bs-toggle="collapse" data-bs-target="#unfold">
         <div class="navbar-toggler-icon"></div>
       </button>
       <div id="unfold" class="navbar-collapse collapse">
         <ul class="navbar-nav">
-          <li class="navbar-items"><a href="products-admin.html" class='nav-link'>products admin</a></li>
+          <li class="navbar-items"><a href="products-admin.html" class='nav-link'>Quản lý sản phẩm</a></li>
           <li class="navbar-items">
-            <a class='nav-link' href="order-info.html">order info</a></li>
+            <a class='nav-link' href="order-info.html">Thông tin khách hàng</a></li>
            <li class="navbar-items">
-             <a class="nav-link" href="change-order.html"> change order</a>
+             <a class="nav-link" href="change-order.html">Thay đổi thứ tự</a>
            </li>
         </ul>
       </div>
