--- a/products-admin.html
+++ b/products-admin.html
@@ -13,17 +13,17 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
      <div class="container">
-      <div class="navbar-brand">products admin</div>
+      <div class="navbar-brand">Quản lý sản phẩm</div>
       <button class="navbar-toggler"data-bs-toggle="collapse" data-bs-target="#unfold">
         <div class="navbar-toggler-icon"></div>
       </button>
       <div id="unfold" class="navbar-collapse collapse">
         <ul class="navbar-nav">
-          <li class="navbar-items"><a href="index.html" class='nav-link'>interface admin</a></li>
+          <li class="navbar-items"><a href="index.html" class='nav-link'>Quản lý trang chủ</a></li>
           <li class="navbar-items">
-            <a class='nav-link' href="order-info.html">order info</a></li>
+            <a class='nav-link' href="order-info.html">Thông tin khách hàng</a></li>
           <li class="navbar-items">
-            <a class="nav-link" href="change-order.html">change order</a>
+            <a class="nav-link" href="change-order.html">Thay đổi thứ tự</a>
           </li>
         </ul>
       </div>
