--- a/order-info.html
+++ b/order-info.html
@@ -13,18 +13,18 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
      <div class="container">
-      <div class="navbar-brand">order info</div>
+      <div class="navbar-brand">Thông tin khách hàng</div>
       <button class="navbar-toggler"data-bs-toggle="collapse" data-bs-target="#unfold">
         <div class="navbar-toggler-icon"></div>
       </button>
       <div id="unfold" class="navbar-collapse collapse">
         <ul class="navbar-nav">
-          <li class="navbar-items"><a href="index.html" class='nav-link'>interface admin</a></li>
+          <li class="navbar-items"><a href="index.html" class='nav-link'>Quản lý trang chủ</a></li>
           <li class="navbar-items">
-            <a class='nav-link' href="products-admin.html">products admin</a></li>
+            <a class='nav-link' href="products-admin.html">Quản lý sản phẩm</a></li>
           <li class="navbar-items">
             <a class="nav-link" href="change-order.html">
-              change order
+              Thay đổi thứ tự
             </a>
           </li>
         </ul>
